--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ locale                   : "en-US"
 title                    : "Cen-You Li"
 title_separator          : "/"
 name                     : &name "Cen-You Li"
-description              : &description "PhD Student"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "licenyou@gmail.com"
+url                      : https://ceny.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "leescott82/ceny.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -28,7 +28,7 @@ author:
   location         : #"Earth"
   employer         : "TU Berlin"
   uri              : # URL
-  email            : "licenyou@gmail.com" 
+  email            : #"licenyou@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
