--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Cen-You Li"
 title_separator          : "/"
 name                     : &name "Cen-You Li"
 description              : &description "licenyou@gmail.com"
-url                      : https://ceny.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://leescott82.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "leescott82/ceny.github.io"
+repository               : "leescott82/leescott82.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
