--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Cen-You Li"
-  pronouns         : # example: "she/her"  
+  pronouns         : # example: "he/his"  
   bio              : #"Short biography for the left-hand sidebar"
   location         : #"Earth"
   employer         : "TU Berlin"
