--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Cen-You Li"
 title_separator          : "/"
 name                     : &name "Cen-You Li"
 description              : &description "licenyou@gmail.com"
-url                      : https://leescott82.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://cenyou.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "leescott82/leescott82.github.io"
+repository               : "cenyou/cenyou.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "leescott82"
+  github           : "cenyou"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
