--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ author:
   youtube          : # Username
   zhihu            : # URL
 
-# Publication Category - The following the list of publication categories and their headings
+# Publication Category - The list of publication categories and their headings
 publication_category:
   books:
     title: 'Books'
